syntax = "proto3";
option go_package = "github.com/example/path/main;main";
package main;

service LogService{
    rpc SaveLog(Log) returns (outLog){}
}

enum LogLevel {
    INFO=0;
    WARN=1;
    ERROR=2;
}

message Log {
    string message = 1;
    LogLevel severity = 2;
}

message outLog {
    string message = 1;
    LogLevel severity = 2;
    string timestamp = 3;
}